<resources>
    <string name="app_name">DuAn1</string>

    <string name="title_activity_fullscreen_splash">FullscreenSplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_employee">Nhân viên</string>
    <string name="menu_slideshow">Món ăn</string>
    <string name="menu_tools">Hóa Đơn</string>
    <string name="menu_share">Thống kê</string>
    <string name="menu_send">Top bán chạy</string>
</resources>
