<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/employee"
            android:title="@string/menu_employee" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/monan"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/hoadon"
            android:title="@string/menu_tools" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/thongke"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/topbanchay"
                android:title="@string/menu_send" />

</menu>
