<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.duan1.ui.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_nhanvien"
        android:name="com.example.duan1.ui.ui.nhanvien.GalleryFragment"
        android:label="@string/menu_employee"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_monan"
        android:name="com.example.duan1.ui.ui.monan.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_hoadon"
        android:name="com.example.duan1.ui.ui.hoadon.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_thongke"
        android:name="com.example.duan1.ui.ui.thongke.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_topbanchay"
        android:name="com.example.duan1.ui.ui.topbanchay.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>